Working on adding ingredient array to GET recipe route
